--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,99 @@ input[type="password"]:focus::placeholder {
         padding: 50px;
     }
 }
+
+.main-page {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.product-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.product-image {
+    width: 200px;
+    height: 200px;
+}
+
+.product-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow-y: auto;
+}
+
+.product-item {
+    flex: calc(20% - 10px);
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    padding: 5px;
+}
+
+@media screen and (max-width: 2560px) {
+    .product-item {
+        flex-basis: calc(20% - 20px);
+    }
+}
+
+@media screen and (max-width: 1920px) {
+    .product-item {
+        flex-basis: calc(25% - 10px);
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    .product-item {
+        flex-basis: calc(33.33% - 10px);
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .product-item {
+        flex-basis: calc(50% - 10px);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .product-item {
+        flex-basis: 100%;
+    }
+}
+
+.web {
+    color: red;
+}
+
+.shop {
+    color: green;
+}
+
+.logoutBtn {
+    padding: 10px;
+}
+
+.shopping-cart-page {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+@media (max-width: 600px) {
+    .shopping-cart-page table {
+        width: 70%;
+    }
+}
+
+@media (max-width: 400px) {
+    .shopping-cart-page th,
+    .shopping-cart-page td {
+        font-size: 14px;
+    }
+}
